Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.03.2022 08:34:08</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.03.2022 09:13:33</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Středa, 09. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Dršťková</strong>
+<strong>Cibulovo Kmínová s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Koprovka s hovězím masem, houskovým knedlíkem NEBO vařeným bramborem</strong>
+<strong>Krůtí játra na cibulce s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Krůtí gordon bleu s hranolkami a tatarkou</strong>
+<strong>Boloňské Špagety s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -65,6 +65,16 @@
 <li class="poznamka">
 <div class="polozka">Arašídový cheesecake s čokoládou</div>
 <div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bezlepková Pavlova roláda s marmeládou a tvarohem</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Šopský salát</div>
+<div class="cena">59 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
@@ -172,7 +182,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z makrely s relisem z cerstvych okurek a celozrnne horcice, bramborovy salat s bilou redkvi, cibulkou, bylinkami a creme fraiche 139</li><li>Spagety s cerstvymi kalamary, rukolou, susenymi rajcaty a petrzelkovym pesrem s ancovickami {L} 169</li><li>Japonsky ramen s dusenym hovezim, sazenym vejcem, psenicnymi nudlemi a gaj coj v silnem hovezim vyvaru se zelenymi bylinkami {L} 139</li><li>Smazeny sekany teleci rizek s ementalem, petrzelkou a spetkou muskatu, bramborovy salat s bilou redkvi, cibulkou, bylinkami a creme fraiche, relis z cerstvych okurek s celozrnnou horcici {L} 169</li><li>Indicke zeleninove birjany z basmati ryze s cizrnovym kari s tofu a zazvorem, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s maslovymi fazolemi, rajcaty a syrem halloumi, jasminova ryze, salatek 139</li><li>Peceny filet z cerstveho morskeho dasa s ananasovou salsou, pecene brambory, salatek 175</li><li>Kow mo daeng – grilovane thajske veprove ve sladke marinade s badyanem a zelenymi bylinkami, jasminova ryze, salatek 139</li><li>Grilovany spiz z koroptvich prsicek s paprikou ramiro, ananasova salsa, cizrnove ragu s chorizem a zeleninou, salatek 175</li><li>Burrito s pecenou dyni, syrem halloumi, pekingskym zelim a rajcaty, pecene brambory, bylinkovy tvaroh, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
