Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.03.2022 08:34:33</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.03.2022 09:13:45</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -164,7 +164,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s maslovymi fazolemi, rajcaty a syrem halloumi, jasminova ryze, salatek 139</li><li>Peceny filet z cerstveho morskeho dasa s ananasovou salsou, pecene brambory, salatek 175</li><li>Kow mo daeng – grilovane thajske veprove ve sladke marinade s badyanem a zelenymi bylinkami, jasminova ryze, salatek 139</li><li>Grilovany spiz z koroptvich prsicek s paprikou ramiro, ananasova salsa, cizrnove ragu s chorizem a zeleninou, salatek 175</li><li>Burrito s pecenou dyni, syrem halloumi, pekingskym zelim a rajcaty, pecene brambory, bylinkovy tvaroh, salatek {L} 139</li></ol>
+<ol><li>Peceny cerstvy pstruh s pecenymi rajcaty a bazalkovym pestem, stouchane brambory s porkem a creme fraiche, salatek z cervene repy s krenem 139</li><li>Peceny filet z cerstveho candata s pecenymi rajcaty a bazalkovym pestem, stouchane brambory s porkem a creme fraiche, salatek z cervene repy s krenem 175</li><li>Grilovany indonesky sataj kebab z krutich prsou s arasidovou omackou, smazena zeleninova ryze, salatek 139</li><li>Doruzova pecena hovezi rostena v arabskem chlebu s jogurtovym matovym dresinkem, pekingskym zelim, cervenou cibuli a rajcaty, pecene brambory {L} 169</li><li>Indicky dal ze zluteho hrachu s rajcaty, zazvorem a ajowanem, sazene vejce, chlebove placky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
