--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.03.2022 08:10:55</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.03.2022 08:34:08</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pátek, 11. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Hříbková s bramborem</strong>
+<strong>Tomatová s cizrnou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Halušky se zelím a uzenou krkovičkou</strong>
+<strong>Vepřová plec na hlívě s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Smažený hermelín s kroketami a tatarkou</strong>
+<strong>Šišky s mákem, strouhankou, cukrem a máslem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							115,-
 						</span>
 </p>
 <p>
