--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.03.2022 08:34:08</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.03.2022 09:13:35</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -164,7 +164,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s pecenymi rajcaty a bazalkovym pestem, stouchane brambory s porkem a creme fraiche, salatek z cervene repy s krenem 139</li><li>Peceny filet z cerstveho candata s pecenymi rajcaty a bazalkovym pestem, stouchane brambory s porkem a creme fraiche, salatek z cervene repy s krenem 175</li><li>Grilovany indonesky sataj kebab z krutich prsou s arasidovou omackou, smazena zeleninova ryze, salatek 139</li><li>Doruzova pecena hovezi rostena v arabskem chlebu s jogurtovym matovym dresinkem, pekingskym zelim, cervenou cibuli a rajcaty, pecene brambory {L} 169</li><li>Indicky dal ze zluteho hrachu s rajcaty, zazvorem a ajowanem, sazene vejce, chlebove placky, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s bylinkovou jogurtovou omackou, libanonsky krupkovy salat s cerstvou zeleninou a bylinkami {L} 139</li><li>Smazeny filet z cerstve norske tresky v tempura testicku, thajsky chilli dzem, libanonsky krupkovy salat s cerstvou zeleninou a bylinkami {L} 169</li><li>Pomalu dusene hovezi ve sladkokysele omacce se zazvorem a korenim peti vuni, jasminova ryze, salatek 139</li><li>Spagety s hovezim rostbifem, gaj coj, pecenymi paprikami, chilli a hoblinami tvrdeho syra {L} 169</li><li>Zapecene lilky plnene cizrnovym kari s rajcaty, cuketou a strouhanym syrem halloumi, salatek 139</li></ol>
 </td>
 </tr>
 </table>
