--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,49 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.03.2022 11:38:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.03.2022 12:09:35</small><table >
+<tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
+<tr>
+<td>
+<div class="containerPriceList">
+<span class="line"></span>
+<h5>Pátek, 11. 03. 2022</h5>
+<span class="line"></span>
+<p>
+<strong>Tomatová s cizrnou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							35,-
+						</span>
+</p>
+<p>
+<strong>Vepřová plec na hlívě s rýží</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							135,-
+						</span>
+</p>
+<p>
+<strong>Šišky s mákem, strouhankou, cukrem a máslem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							115,-
+						</span>
+</p>
+<p>
+<strong>Teplý bufet</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							35,-
+						</span>
+</p>
+<p>
+<strong>Salátový bufet</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							45,-
+						</span>
+</p>
+</div>
+</td>
+</tr>
 <table>
 <tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
 <tr>
