--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.03.2022 13:54:42</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.03.2022 06:09:37</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pátek, 11. 03. 2022</h5>
+<h5>Sobota, 12. 03. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Tomatová s cizrnou</strong>
@@ -50,44 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 11.3.2022</div>
+<div class="nadpis">Sobota 12.3.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Medovník</div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Čokoládový cheesecake s pomerančem </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Bramborová polévka s houbami - v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Bramborová polévka s houbami - samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí nudličky v teriyaki omáčce, jasmínová rýže, čerstvá zelenina, koriandr <em title="Obiloviny obsahující lepek">1</em><em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>300g Quesadilla plněná špenátem, pečenými žampiony a sýrem cheddar, česnekový dip, variace listových salátů <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -98,13 +63,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  </td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnečka se šunkou, sýrem a chlebovými krutony</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová s klobásou a krutóny</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Předkrm</h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothaj z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr></tbody>
+<h5 class="border_box_title">Předkrm</h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Katův vepřový šleh s cibulí a feferonkou, smažené bramborové hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněný paprikový lusk v rajské omáčce, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Štěpánská hovězí pečeně, dušená rýže</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová plec na smetanové houbové omáčce, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, bílé zelí</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené těstoviny s uzeným masem a rozšlehanými vejci, salát coleslav</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z kuřecích prsou, hráškové pyré, grilované rajče,rukola,  parmazán</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampióny, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné sýrové omáčce, restované špecle</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dukátové buchtičky s vanilkovým šodo a kapkou rumu, šlehačka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP</td><td class="menuName">160g Smažené řízky z kuřecích prsou a vepřové pečeně, vařené brambory s máslem a šnitlíkem, citrón</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s hovězím a uzeným masem, šlehačkou a strouhaným křenem, kynuté houskové knedlíky</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené francouzské brambory s uzeninou, smetanou a vejci, salát coleslav </td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové výpečky, opečené bramborové knedlíky na tálu, dušené bílé zelí </td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na tálu s pórkem a červenou cibulí, grilované brambory</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta:150g Do růžova pečená vepřová panenka na grilované zelenině, celerové hranolky, zakysaná smetana s pečeným česnekem</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou se šunkou zapečené sýrem, smažené hranolky</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine aglio olio peperonicino, medailonky z vepřové panenky, parmazán </td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná kuřecími stripsy, trhanými listy salátu, zeleninou a mexickým dresinkem, smažené hranolky, česnekový dip</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TOP</td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -152,11 +120,6 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 </tr>
 </tbody>
 </table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Brokolicový krém s máslovými krutony 1a,3,7</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Mexický hovězí guláš sypaný sýrem s hráškovou rýží 1a,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažený sýr Gouda 48% s hranolky, naší tatarskou omáčkou a trhaným salátem 1a,3,7,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Zeleninový salát s pečenou červenou řepou, anglickým roasbeefem, křenovou majonézou a rozpečenou bylinkovou bagetou 1a,3,6,7,10</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
