Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.03.2022 13:53:02</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.03.2022 06:32:12</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Neděle, 13. 03. 2022</h5>
+<h5>Pondělí, 14. 03. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Tomatová s cizrnou</strong>
@@ -50,9 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 13.3.2022</div>
+<div class="nadpis">Pondělí 14.3.2022</div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -63,22 +63,19 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Květáková s vejci</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Předkrm</h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr></tbody>
+<h5 class="border_box_title">Předkrm </h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažený sýr (45%) vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřový katův šleh, dušená jasmínová rýže</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočka na kyselo s uzeným masem, volské oko, kyselá okurka, škvarky s cibulí</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Na tálu pečená vepřová kapsa plněná žampiony a slaninou, mačkané brambory s cibulkou</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">1/2</td><td class="menuName">Pečená kachna na kmíně, bramborové a houskové knedlíky, dušené bílé zelí</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z kuřecích prsou s mozarelou a rajčaty, zeleninový salátek, mrkvové pyré, vařené vejce</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine s houbami zjemněné smetanou, filírovaná vepřová panenka, parmazán</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné omáčce z modrého sýra, smažené hranolky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Náš dvojitý burger 100g + 100g s listy salátů, šunkou, sýrem, cibulí, kyselou okurkou, beraním rohem a mexickým dresinkem, smažené hranolky, tatarka</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný olivovým olejem, smažené kuřecí tripsy obalené v cornflakes, vařené vejce</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené řízky z kuřecích prsou, vařené brambory s máslem a šnitlíkem, citron</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, šlehačka, citrón</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s volským okem na šunce, pečené brambory s kmínem</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Špíz z kuřecích prsou, vepřové kotlety, cibule a papriky na roštu, rukolový salát s červenou řepou, vařené vejce, květákové pyré</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Lasagne s boloňským ragú, bešamelem a sýrem,.salát coleslav </td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">1/2</td><td class="menuName">Pečená kachna na kmíně, bramborové a houskové knedlíky, dušené bílé zelí</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Do růžova pečená vepřová panenka na jemné hříbkové omáčce, smažené hranolky</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TOP</td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5></tbody></table></table>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -89,37 +86,42 @@
 <table class="dm">
 <tbody>
 <tr>
-<td class="amount">150 g</td>
-<td class="title">Carpaccio z uzeného hovězího jazyka s naší nakládanou zeleninou,
-wasabi majonézou a domácím kmínovým chlebem 1ab,3,10</td>
-<td class="pricem">149 Kč</td>
+<td class="amount"></td>
+<td class="title">Grilované papriky v česnekovém olivovém oleji s ricottou
+a bazalkou, rozpečená bylinková bageta 1a,3,7</td>
+<td class="pricem">145 Kč</td>
 </tr>
 <tr>
 <td class="amount"></td>
-<td class="title">Kulajda s hříbky a pošírovaným vejcem 1a,3,7,9</td>
-<td class="pricem">75 Kč</td>
+<td class="title">Polévka Tom Yum Goong s krevetami
+(rajčata, hlíva ústřičná, koriandr, kokosové mléko) 4,5,6,9</td>
+<td class="pricem">99 Kč</td>
 </tr>
 <tr>
-<td class="amount">1/4</td>
-<td class="title">Pečené kachní stehno na kmíně s cibulovým zelím
-		a bramborovými špalíčky 1a,3,12</td>
-<td class="pricem">215 Kč</td>
+<td class="amount">200 g</td>
+<td class="title">Presovaný vepřový bůček v teriyaki omáčce s grilovaným salátem
+Pak choi a jasmínovou rýží 6,12</td>
+<td class="pricem">205 Kč</td>
 </tr>
 <tr>
-<td class="amount">250 g</td>
-<td class="title">SATAY: Grilovaný kuřecí špíz v marinádě ze sójové omáčky,
-limetek, kurkumy a koriandru s arašídovou omáčkou, nakládanými
-salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
-<td class="pricem">209 Kč</td>
+<td class="amount">180 g</td>
+<td class="title">Jehněčí burger se sýrem Cheddar, vídeňskou cibulkou,
+smaženými bramborovými lupínky a chipotle majonézou
+1a,3,7,10,11</td>
+<td class="pricem">235 Kč</td>
 </tr>
 <tr>
 <td class="amount"></td>
-<td class="title">Smažená jablka v mandlovém těstíčku s karamelovou omáčkou
-		1a,3,7,8a</td>
-<td class="pricem">85 Kč</td>
+<td class="title">Italské tiramisu 1a,3,7,8a</td>
+<td class="pricem">89 Kč</td>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Boršč s červenou řepou a zakysanou smetanou 1a,7,9</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí kostky na česneku se špenátem a našimi bramborovými knedlíky 1a,3,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Špíz z vepřové krkovice s klobásou a paprikou s opečenými brambory, cibulovým salátem a chipotle majonézou 1a,3,7,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Hříbkové krémové rizoto z rýže Arborio se sýrem Fotre Classico a rukolovými listy 1a,7</td><td class="pricem">139 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
