Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.03.2022 12:34:08</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.03.2022 13:18:50</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -106,7 +106,7 @@
 <h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené holanské řízky, bramborový salát</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, šlehačka, citrón</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí roštěná na slanině, dušená jasmínová rýže</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové halušky s uzeným masem a bílým zelím, škvarky na cibulce</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše uzená krkovička z tálu, bramborová kaše s máslem, sázené vejce, kyselá okurka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kung pao z kuřecích prsou se zeleninou a arašídy, smažené bramborové hranolky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s volským okem na šunce, pečené brambory s kmínem</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 170g Kapsa z kuřecích prsou plněná brokolicí, šunkou a nivou, hráškové pyré, malý zeleninový salát</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vinná klobása na tálu, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Buritto v pšeničné tortille se sýrem, smažené bramborové hranolky, zakysaná smetana</td><td class="menuPrice">145,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené holanské řízky, bramborový salát</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, šlehačka, citrón</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí roštěná na slanině, dušená jasmínová rýže</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové halušky s uzeným masem a bílým zelím, škvarky na cibulce</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše uzená krkovička z tálu, bramborová kaše s máslem, sázené vejce, kyselá okurka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kung pao z kuřecích prsou se zeleninou a arašídy, smažené bramborové hranolky</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s volským okem na šunce, pečené brambory s kmínem</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 170g Kapsa z kuřecích prsou plněná brokolicí, šunkou a nivou, hráškové pyré, malý zeleninový salát</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vinná klobása na tálu, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Buritto v pšeničné tortille se sýrem, smažené bramborové hranolky, zakysaná smetana</td><td class="menuPrice">145,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
@@ -121,6 +121,44 @@
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="amount"></td>
+<td class="title">Grilované papriky v česnekovém olivovém oleji s ricottou
+a bazalkou, rozpečená bylinková bageta 1a,3,7</td>
+<td class="pricem">145 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Polévka Tom Yum Goong s krevetami
+(rajčata, hlíva ústřičná, koriandr, kokosové mléko) 4,5,6,9</td>
+<td class="pricem">99 Kč</td>
+</tr>
+<tr>
+<td class="amount">200 g</td>
+<td class="title">Presovaný vepřový bůček v teriyaki omáčce s grilovaným salátem
+Pak choi a jasmínovou rýží 6,12</td>
+<td class="pricem">205 Kč</td>
+</tr>
+<tr>
+<td class="amount">180 g</td>
+<td class="title">Jehněčí burger se sýrem Cheddar, vídeňskou cibulkou,
+smaženými bramborovými lupínky a chipotle majonézou
+1a,3,7,10,11</td>
+<td class="pricem">235 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Italské tiramisu 1a,3,7,8a</td>
+<td class="pricem">89 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
 <tr>
 <td>
 <table class="dm"><tr><td class="amount"> </td><td class="title">Bramboračka s lesními houbami 1a,7,9</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí kostky na víně s anglickou slaninou a stříbrnými cibulkami s bramborovou kaší 1a,7,9,12</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí špíz Tandoori s kari rýží a asijským zelným salátem 1a,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">1ks</td><td class="title">Quesadilla s restovanou zeleninou a sýrem, bylinkový zákys, trhaný salát 1a,3,7</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
