Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.03.2022 09:41:15</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.03.2022 10:11:48</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -28,14 +28,14 @@
 						</span>
 </p>
 <p>
-<strong>Teplý bufet: Asijská žebra, Rybí filátko s tomatovou cizrnou, pečené brambory, Rýže, zelenina</strong>
+<strong>Teplý bufet:</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Salátový bufet: Rajčatový s cibulkou a vejcem, Míchaná zelenina s jogurtem a koprem</strong>
+<strong>Salátový bufet:</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
@@ -129,7 +129,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazeny kapr po secuansku ve sladkokysele omacce se zeleninou a secuanskym peprem, jasminova ryze, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, bramborovy salat s cervenou repou, cibulkou, koprem a majonezou 169</li><li>Grilovana seleci zebra se zazvorem a ananasem, jasminova ryze, salatek 139</li><li>Smazene rizecky z panenske svickove, bramborovy salat s cervenou repou, cibulkou, koprem a majonezou, citron {L} 169 </li><li>Burrito s pikantnim fazolovym chilli s paprikami, pecenou dyni a chipotle, pecene brambory, jogurovy dip, salatek {L} 139</li></ol>
+<ol><li>Smazeny kapr po secuansku ve sladkokysele omacce se zeleninou a secuanskym peprem, jasminova ryze, salatek (L)  139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, bramborovy salat s cervenou repou, cibulkou, koprem a majonezou 169</li><li>Grilovana seleci zebra se zazvorem a ananasem, jasminova ryze, salatek 139</li><li>Smazene rizecky z panenske svickove, bramborovy salat s cervenou repou, cibulkou, koprem a majonezou, citron {L} 169 </li><li>Burrito s pikantnim fazolovym chilli s paprikami, pecenou dyni a chipotle, pecene brambory, jogurovy dip, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
